--- a/charts/cloud-baseline/Chart.yaml
+++ b/charts/cloud-baseline/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.2
+version: 0.1.3
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -46,3 +46,6 @@ dependencies:
   - name: reporting-services
     version: "^0"
     repository: "https://htaic.github.io/helm-charts"
+  - name: cp-kafka-rest
+    version: "0.1.1"
+    repository: "https://htaic.github.io/helm-charts"  
