--- a/charts/complete-auth-service/values.yaml
+++ b/charts/complete-auth-service/values.yaml
@@ -11,9 +11,8 @@ image:
   hostname: auth
   domainPath: "auth"
   env:
-    # # TODO: This should be made toggleable for edge vs cloud...
-    # - name: OPERATION_ENV
-    #   value: edge
+    - name: OPERATION_ENV
+      value: edge
     - name: AWS_REGION
       value: YOUR_AWS_REGION
     - name: AWS_ACCOUNT
@@ -36,7 +35,7 @@ service:
 resources:
   requests:
     cpu: 250m
-    memory: 750Mi
+    memory: 350Mi
 # TODO: This should be made toggleable for edge vs cloud...
 serviceAccount:
   name: "auth"
