--- a/charts/cloud-baseline/values.yaml
+++ b/charts/cloud-baseline/values.yaml
@@ -1,6 +1,10 @@
 fullnameOverride: "baseline"
 enableTraefikDashboard: true
 
+AWS:
+  region: YOUR_AWS_REGION
+  accountId: YOUR_AWS_ACCOUNT_ID
+
 # https://github.com/traefik/traefik-helm-chart/blob/master/traefik/values.yaml
 traefik:
   image:
