--- a/charts/cloud-baseline/values.yaml
+++ b/charts/cloud-baseline/values.yaml
@@ -239,7 +239,7 @@ cp-kafka-rest:
   affinity: {}
   configurationOverrides: null
   cp-kafka:
-    bootstrapServers: "PLAINTEXT://b-1.mskhtdevsaasuw21.1jh58t.c2.kafka.us-west-2.amazonaws.com:9092,PLAINTEXT://b-2.mskhtdevsaasuw21.1jh58t.c2.kafka.us-west-2.amazonaws.com:9092,PLAINTEXT://b-3.mskhtdevsaasuw21.1jh58t.c2.kafka.us-west-2.amazonaws.com:9092"
+    bootstrapServers: ${YOUR_BOOTSTRAP_SERVERS}
   cp-schema-registry:
     url: ""
   cp-zookeeper:
