--- a/charts/kafka-rest/templates/deployment.yaml
+++ b/charts/kafka-rest/templates/deployment.yaml
@@ -69,9 +69,13 @@ spec:
             {{- end }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
+          {{- if .Values.image.env }}
+          env: 
+            {{- toYaml .Values.image.env | nindent 12 }}
+          {{- end }}
           env:
           - name: KAFKA_REST_HOST_NAME
-            value: k8s-ht-dev-saas-uw2-1.dev.hticdev.net/kafka ##TODO Extract Cluster name + DNS(dev.hticdev.net)
+            value: {{ template "cp-kafka-rest.kafka.resthostname" . }}
           - name: KAFKA_REST_BOOTSTRAP_SERVERS
             value: {{ template "cp-kafka-rest.kafka.bootstrapServers" . }}
           - name: KAFKA_REST_SCHEMA_REGISTRY_URL
