--- a/charts/kafka-rest/values-template.yaml
+++ b/charts/kafka-rest/values-template.yaml
@@ -96,3 +96,4 @@ cp-schema-registry:
 ##Plain Text ##TODO:Parameter store/Environment variables to store value
 cp-kafka:
   bootstrapServers: ""
+  resthostname: ""
