--- a/charts/cloud-baseline/Chart.yaml
+++ b/charts/cloud-baseline/Chart.yaml
@@ -46,6 +46,6 @@ dependencies:
   - name: reporting-services
     version: "^0"
     repository: "https://htaic.github.io/helm-charts"
-  - name: cp-kafka-rest
-    version: "0.1.1"
-    repository: "https://htaic.github.io/helm-charts"  
+  # - name: cp-kafka-rest
+  #   version: "0.1.1"
+  #   repository: "https://htaic.github.io/helm-charts"  
