--- a/charts/kafka-rest/templates/deployment.yaml
+++ b/charts/kafka-rest/templates/deployment.yaml
@@ -57,7 +57,7 @@ spec:
             mountPath: /etc/jmx-kafka-rest
         {{- end }}
         - name: {{ template "cp-kafka-rest.name" . }}-server
-          image: "{{ .Values.image }}:{{ .Values.imageTag }}"
+          image: confluentinc/cp-kafka-rest:6.1.0
           imagePullPolicy: "{{ .Values.imagePullPolicy }}"
           ports:
             - name: rest-proxy
