--- a/charts/cloud-baseline/values.yaml
+++ b/charts/cloud-baseline/values.yaml
@@ -234,6 +234,15 @@ reporting-services:
     maxReplicas: 100
     targetCPUUtilizationPercentage: 80
 
+# # https://github.com/confluentinc/cp-helm-charts/blob/master/charts/cp-kafka-rest/values.yaml
+# cp-kafka-rest:
+#   configurationOverrides:
+#     "host.name": "ABC"
+#   customEnv: {
+#     # KAFKA_REST_HOST_NAME: "YOUR_KAFKA_REST_HOST_NAME",
+#     KAFKA_REST_BOOTSTRAP_SERVERS: "YOUR_BOOTSTRAP_SERVERS"
+#   }
+
 # #https://github.com/htaic/helm-charts/blob/main/charts/kafka-rest/values-dev.yaml
 # cp-kafka-rest:
 #   image: 
