--- a/charts/kafka-rest/templates/deployment.yaml
+++ b/charts/kafka-rest/templates/deployment.yaml
@@ -70,9 +70,10 @@ spec:
           resources:
 {{ toYaml .Values.resources | indent 12 }}
           env:
-          {{- if .Values.image.env }}
-            {{- toYaml .Values.image.env | nindent 12 }}
-          {{- end }}
+          - name: KAFKA_REST_HOST_NAME
+            value: {{ template "cp-kafka-rest.kafka.resthostname" . }}
+          - name: KAFKA_REST_BOOTSTRAP_SERVERS
+            value: {{ template "cp-kafka-rest.kafka.bootstrapServers" . }}
           - name: KAFKA_REST_SCHEMA_REGISTRY_URL
             value: {{ template "cp-kafka-rest.cp-schema-registry.service-name" . }}
           - name: KAFKAREST_HEAP_OPTS
