--- a/charts/kafka-rest/values.yaml
+++ b/charts/kafka-rest/values.yaml
@@ -1,41 +1,10 @@
-image:
-  name: "confluentinc/cp-kafka-rest"
-  pullPolicy: Always
-  tag: 6.1.0
-  env:
-  - name: KAFKA_REST_HOST_NAME
-    value: YOUR_KAFKA_REST_HOST_NAME
-  - name: KAFKA_REST_BOOTSTRAP_SERVERS
-    value: YOUR_BOOTSTRAP_SERVERS
-affinity: {}
-configurationOverrides: null
-cp-kafka:
-  bootstrapServers: YOUR_BOOTSTRAP_SERVERS
-  resthostname: YOUR_KAFKA_REST_HOST_NAME
-cp-schema-registry:
-  url: ""
-cp-zookeeper:
-  url: ""
-customEnv: {}
-external:
-  domainPath: kafka
-  enabled: true
-heapOptions: -Xms512M -Xmx512M
-imagePullSecrets: null
-imageTag: 6.1.0
-jmx:
-  port: 5555
-nodeSelector: {}
-podAnnotations: {}
-prometheus:
-  jmx:
-    enabled: false ##Disable JMX
-    image: solsson/kafka-prometheus-jmx-exporter@sha256
-    imagePullPolicy: IfNotPresent
-    imageTag: 6f82e2b0464f50da8104acd7363fb9b995001ddff77d248379f8788e78946143
-    port: 5556
-    resources: {}
-replicaCount: 1
-resources: {}
-servicePort: 8082
-tolerations: []
+# #https://github.com/htaic/helm-charts/blob/main/charts/kafka-rest/values-dev.yaml
+cp-kafka-rest:
+  image: "confluentinc/cp-kafka-rest"
+  imageTag: 6.1.0
+  cp-kafka:
+    bootstrapServers: YOUR_BOOTSTRAP_SERVERS
+    resthostname: YOUR_KAFKA_REST_HOST_NAME
+  prometheus:
+    jmx:
+      enabled: false ##Disable JMX
