--- a/charts/cloud-baseline/Chart.yaml
+++ b/charts/cloud-baseline/Chart.yaml
@@ -46,6 +46,13 @@ dependencies:
   - name: reporting-services
     version: "^0"
     repository: "https://htaic.github.io/helm-charts"
-  - name: cp-kafka-rest
-    version: "0.1.1"
-    repository: "https://htaic.github.io/helm-charts"  
+  ##TODO: ADD Kafka-rest into the cloud-baseline as a subchart
+  # - name: cp-kafka-rest
+  #   version: "^0"
+  #   # repository: "https://htaic.github.io/helm-charts"  
+  #   repository: "file://../kafka-rest"  
+
+  # this repo doesn't support the cp-kafka-rest chart only the full stack
+  # - name: cp-kafka-rest
+  #   version: "^0"
+  #   repository: "https://confluentinc.github.io/cp-helm-charts/"  
