--- a/charts/core-edge/templates/dcs-deployment.yaml
+++ b/charts/core-edge/templates/dcs-deployment.yaml
@@ -20,8 +20,8 @@ spec:
     spec:
       containers:
         - name: dcs
-          {{- if .Values.dcs.image.digest }}
-          image: {{ .Values.dcs.image.repository }}@{{ .Values.dcs.image.digest }}
+          {{- if .Values.dcs.image.tag }}
+          image: {{ .Values.dcs.image.repository }}@{{ .Values.dcs.image.tag }}
           {{- else }}
           image: {{ .Values.dcs.image.repository }}:latest
           {{- end }}
