--- a/charts/core-edge/templates/edgeccs-deployment.yaml
+++ b/charts/core-edge/templates/edgeccs-deployment.yaml
@@ -18,21 +18,45 @@ spec:
         {{- include ".helm.selectorLabels" . | nindent 8 }}
         app: edgeccs
     spec:
+      initContainers:
+        - name: keymanager
+          {{- if .Values.keymanager.image.tag }}
+          image: {{ .Values.keymanager.image.repository }}@{{ .Values.keymanager.image.tag }}
+          {{- else }}
+          image: {{ .Values.keymanager.image.repository }}:latest
+          {{- end }}
+          imagePullPolicy: Always
+          {{- if .Values.edgeccs.image.env }}
+          env: 
+            {{- toYaml .Values.edgeccs.image.env | nindent 12 }}
+          {{- end }}          
+          command: ['sh', '-c', 'cp -rH /cert/* /certLoader && ls -laR /certLoader']
+          volumeMounts:
+            - name: workdir
+              mountPath: /certLoader
+            - name: cert
+              mountPath: /cert/device_cert
       containers:
         - name: edgeccs
-          {{- if .Values.edgeccs.image.digest }}
-          image: {{ .Values.edgeccs.image.repository }}@{{ .Values.edgeccs.image.digest }}
+          {{- if .Values.edgeccs.image.tag }}
+          image: {{ .Values.edgeccs.image.repository }}@{{ .Values.edgeccs.image.tag }}
           {{- else }}
           image: {{ .Values.edgeccs.image.repository }}:latest
           {{- end }}
           imagePullPolicy: Always
+          {{- if .Values.edgeccs.image.env }}
+          env: 
+            {{- toYaml .Values.edgeccs.image.env | nindent 12 }}
+          {{- end }}
           envFrom:
             - secretRef:
                 name: "baseline-redis-secret"
           volumeMounts:
-          - name: cert
+          - name: workdir
             mountPath: /cert
       volumes:
+        - name: workdir
+          emptyDir: {}
         - name: cert
           configMap:
             name: "{{ include ".helm.fullname" . }}-certs"
