--- a/charts/core-edge/templates/scs-deployment.yaml
+++ b/charts/core-edge/templates/scs-deployment.yaml
@@ -22,8 +22,8 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       containers:
         - name: scs
-          {{- if .Values.scs.image.digest }}
-          image: {{ .Values.scs.image.repository }}@{{ .Values.scs.image.digest }}
+          {{- if .Values.scs.image.tag }}
+          image: {{ .Values.scs.image.repository }}@{{ .Values.scs.image.tag }}
           {{- else }}
           image: {{ .Values.scs.image.repository }}:latest
           {{- end }}
