--- a/charts/video-edge-webrtc-service/Chart.yaml
+++ b/charts/video-edge-webrtc-service/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: edge-webrtc-service
-description: A Helm chart for Kubernetes micro front ends deployed behind a traefik ingress
+name: video-edge-webrtc-service
+description: A Helm chart for video-edge-webrtc-service
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.2
+version: 0.0.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
