Video connection manager fix (#119)
* chore: remove unused functions

* chore: remove service account ref

* chore: update vars

* chore: remove REDIS_HOST var since its passed in via secrets

---------

Co-authored-by: HanwhaRoot <htic.admin@hanwha-wisenet.com>

--- a/charts/video-connection-manager/templates/deployment.yaml
+++ b/charts/video-connection-manager/templates/deployment.yaml
@@ -6,9 +6,7 @@ metadata:
   labels:
     {{- include ".helm.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.image.replicaCount }}
-  {{- end }}
+  replicas: 1
   selector:
     matchLabels:
       {{- include ".helm.selectorLabels" . | nindent 6 }}
@@ -27,7 +25,6 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include ".helm.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
