--- a/charts/core-baseline/values.yaml
+++ b/charts/core-baseline/values.yaml
@@ -1,6 +1,11 @@
 fullnameOverride: "baseline"
 enableTraefikDashboard: true
 
+#TODO: edge environments should not need this
+AWS:
+  region: YOUR_AWS_REGION
+  accountId: "YOUR_AWS_ACCOUNT_ID"
+
 # https://github.com/traefik/traefik-helm-chart/blob/master/traefik/values.yaml
 traefik:
   image:
