--- a/charts/postgresql/templates/secret-configmap.yaml
+++ b/charts/postgresql/templates/secret-configmap.yaml
@@ -4,6 +4,7 @@ metadata:
   name: "{{ .Release.Name }}-configmap"
 data:
   POSTGRES_DB: {{ .Values.postgres.db }}
+  POSTGRES_PORT: {{ .Values.postgres.containerPort }}
   {{- if (((.Values).RDS).host) }}
   POSTGRES_HOSTNAME: {{ .Values.RDS.host }}
   {{- else }}
