--- a/charts/core-edge/templates/cert.yaml
+++ b/charts/core-edge/templates/cert.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   name: "{{ include ".helm.fullname" . }}-certs"
+type: Opaque
 data:
-{{ (.Files.Glob "certs/*").AsConfig | indent 2 }}
+{{ (.Files.Glob "certs/*").AsSecrets | indent 2 }}
 
