--- a/charts/core-edge/values.yaml
+++ b/charts/core-edge/values.yaml
@@ -10,12 +10,23 @@ scs:
   tag: latest
   image:
     repository: ghcr.io/htaic/scsrun
+  resources:
+    requests:
+      cpu: 250m
+      memory: 350Mi
 
-#init pod for edgeccs
 keymanager:
+  replicaCount: 1
   tag: latest
   image:
     repository: ghcr.io/htaic/edgekeymanagerrun
+    env:
+      - name: edgeId
+        value: YOUR_EDGE_ID
+  resources:
+    requests:
+      cpu: 250m
+      memory: 350Mi
 
 edgeccs:
   replicaCount: 1
@@ -27,9 +38,17 @@ edgeccs:
         value: YOUR_EDGE_ID
       - name: awsIotDataEndpoint
         value: YOUR_AWS_IOT_DATA_ENDPOINT
+  resources:
+    requests:
+      cpu: 250m
+      memory: 350Mi
 
 dcs:
   replicaCount: 1
   tag: latest
   image:
     repository: ghcr.io/htaic/edgedcsmanagerrun
+  resources:
+    requests:
+      cpu: 250m
+      memory: 350Mi
