--- a/charts/core-edge/values.yaml
+++ b/charts/core-edge/values.yaml
@@ -1,22 +1,54 @@
 
 imagePullSecrets: dockerconfigjson-github-com
+namespace: hanwha
+
+service:
+  type: ClusterIP
 
 scs:
   replicaCount: 1
+  tag: latest
   image:
     repository: ghcr.io/htaic/scsrun
-
-edgeccs:
-  replicaCount: 1
-  image:
-    repository: ghcr.io/htaic/edgeccs
+  resources:
+    requests:
+      cpu: 250m
+      memory: 350Mi
 
 keymanager:
   replicaCount: 1
+  tag: latest
   image:
     repository: ghcr.io/htaic/edgekeymanagerrun
+    env:
+      - name: edgeId
+        value: YOUR_EDGE_ID
+  resources:
+    requests:
+      cpu: 250m
+      memory: 350Mi
+
+edgeccs:
+  replicaCount: 1
+  tag: latest
+  image:
+    repository: ghcr.io/htaic/edgeccs
+    env:
+      - name: edgeId
+        value: YOUR_EDGE_ID
+      - name: awsIotDataEndpoint
+        value: YOUR_AWS_IOT_DATA_ENDPOINT
+  resources:
+    requests:
+      cpu: 250m
+      memory: 350Mi
 
 dcs:
   replicaCount: 1
+  tag: latest
   image:
     repository: ghcr.io/htaic/edgedcsmanagerrun
+  resources:
+    requests:
+      cpu: 250m
+      memory: 350Mi
