--- a/charts/edge-webrtc-service/values.yaml
+++ b/charts/edge-webrtc-service/values.yaml
@@ -9,8 +9,20 @@ image:
   tag: "latest"
   hostname: edge-webrtc-service
   env:
-    - name: ENVVARIABLENAME
-      value: VALUE
+    - name: EWS_RTSP_URL
+      value: YOUR_EWS_RTSP_URL
+    - name: EWS_REDISCLIENT_DB
+      value: "0"
+    - name: EWS_WEBRTC_BROKER_URL
+      value: test
+    - name: EWS_WEBRTC_CLIENTID
+      value: rest
+    - name: EWS_WEBRTC_DEVICEID
+      value: test
+    - name: EWS_WEBRTC_SIGNALING_PASSWORD
+      value: test
+    - name: EWS_WEBRTC_SUBDEVICEID
+      value: test
 
 ##########################
 # Caution updating below #
@@ -29,8 +41,8 @@ service:
 
 resources:
   requests:
-    cpu: 250m
-    memory: 750Mi
+    cpu: 150m
+    memory: 350Mi
 
 serviceAccount:
   create: true
