--- a/charts/edge-webrtc-service/templates/deployment.yaml
+++ b/charts/edge-webrtc-service/templates/deployment.yaml
@@ -6,7 +6,9 @@ metadata:
   labels:
     {{- include ".helm.labels" . | nindent 4 }}
 spec:
-  replicas: 1
+  {{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.image.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include ".helm.selectorLabels" . | nindent 6 }}
@@ -17,8 +19,10 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
+        date: "{{ now | unixEpoch }}"
         {{- include ".helm.selectorLabels" . | nindent 8 }}
     spec:
+      hostname: {{ .Values.image.hostname }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -46,34 +50,16 @@ spec:
             - name: http
               containerPort: {{ .Values.image.containerPort }}
               protocol: TCP
-          livenessProbe:
-            exec:
-              command:
-              - cat
-              - /opt/iot/certificate.pem
-            initialDelaySeconds: 5
-            periodSeconds: 5              
-          readinessProbe:
-            exec:
-              command:
-              - cat
-              - /opt/iot/certificate.pem
-            initialDelaySeconds: 5
-            periodSeconds: 5  
+          # livenessProbe:
+          #   httpGet:
+          #     path: /{{ .Values.image.livenessProbe }}
+          #     port: http
+          # readinessProbe:
+          #   httpGet:
+          #     path: /{{ .Values.image.readinessProbe }}
+          #     port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-            {{- if .Values.iot.secret }}
-          volumeMounts:
-            - name: iot-secret
-              mountPath: /opt/iot
-              readOnly: true
-            {{- end }}            
-        {{- if .Values.iot.secret }}
-      volumes:
-        - name: iot-secret
-          secret:
-            secretName: {{ .Values.iot.secret }}
-        {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
