--- a/charts/core-edge/templates/service.yaml
+++ b/charts/core-edge/templates/service.yaml
@@ -8,8 +8,8 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: '6379'
-      targetPort: '6379'
+    - port: 6379
+      targetPort: 6379
       protocol: TCP
       name: http
   selector:
