--- a/charts/core-edge/templates/service.yaml
+++ b/charts/core-edge/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include ".helm.fullname" . }}
+  name: edge-redis
   namespace: {{ .Values.namespace }}
   labels:
     {{- include ".helm.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
     - port: 6379
       targetPort: 6379
