--- a/charts/core-edge/templates/scs-deployment.yaml
+++ b/charts/core-edge/templates/scs-deployment.yaml
@@ -28,6 +28,9 @@ spec:
           image: {{ .Values.scs.image.repository }}:latest
           {{- end }}
           imagePullPolicy: Always
+          envFrom:
+            - secretRef:
+                name: "baseline-redis-secret"          
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
         - name: {{ .Values.imagePullSecrets }}
