adding redis server environment variables from baseline-redis-secret

--- a/charts/rtsp-service/templates/deployment.yaml
+++ b/charts/rtsp-service/templates/deployment.yaml
@@ -45,6 +45,9 @@ spec:
           env: 
             {{- toYaml .Values.image.env | nindent 12 }}
           {{- end }}
+          envFrom:
+            - secretRef:
+                name: "baseline-redis-secret"
           args: [ {{.Values.image.args}} ]
           ports:
             - name: http
