--- a/charts/core-edge/templates/edgeccs-deployment.yaml
+++ b/charts/core-edge/templates/edgeccs-deployment.yaml
@@ -41,6 +41,8 @@ spec:
           env:
             {{- toYaml .Values.keymanager.image.env | nindent 12 }}
           {{- end }}
+          resources:
+            {{- toYaml .Values.keymanager.resources | nindent 12 }}
           volumeMounts:
             - name: shared-volume
               mountPath: /cert
@@ -56,6 +58,8 @@ spec:
           {{- end }}
           imagePullPolicy: Always
           {{- if .Values.edgeccs.image.env }}
+          resources:
+            {{- toYaml .Values.edgeccs.resources | nindent 12 }}
           env:
             {{- toYaml .Values.edgeccs.image.env | nindent 12 }}
           {{- end }}
