test: try single pod

--- a/charts/core-edge/templates/edgeccs-deployment.yaml
+++ b/charts/core-edge/templates/edgeccs-deployment.yaml
@@ -29,28 +29,27 @@ spec:
       #       mountPath: /cert/device_cert_as_secret
       #   command: ['sh', '-c', "mkdir -p /cert/device_cert; cp -Lr /cert/device_cert_as_secret/* /cert/device_cert"]
       containers:
-{{- if .Values.keymanager }}
-        - name: keymanager
-          # {{- if .Values.keymanager.image.tag }}
-          # image: {{ .Values.keymanager.image.repository }}@{{ .Values.keymanager.image.tag }}
-          # {{- else }}
-          # image: {{ .Values.keymanager.image.repository }}:latest
-          # {{- end }}
-          image: nginx:latest
-          imagePullPolicy: Always
-          {{- if .Values.keymanager.image.env }}
-          env:
-            {{- toYaml .Values.keymanager.image.env | nindent 12 }}
-          {{- end }}
-          resources:
-            {{- toYaml .Values.keymanager.resources | nindent 12 }}
-          volumeMounts:
-            - name: shared-volume
-              mountPath: /cert
-            - name: device-certs
-              readOnly: true
-              mountPath: /cert/device_cert_as_secret
-{{- end }}
+# {{- if .Values.keymanager }}
+#         - name: keymanager
+#           {{- if .Values.keymanager.image.tag }}
+#           image: {{ .Values.keymanager.image.repository }}@{{ .Values.keymanager.image.tag }}
+#           {{- else }}
+#           image: {{ .Values.keymanager.image.repository }}:latest
+#           {{- end }}
+#           imagePullPolicy: Always
+#           {{- if .Values.keymanager.image.env }}
+#           env:
+#             {{- toYaml .Values.keymanager.image.env | nindent 12 }}
+#           {{- end }}
+#           resources:
+#             {{- toYaml .Values.keymanager.resources | nindent 12 }}
+#           volumeMounts:
+#             - name: shared-volume
+#               mountPath: /cert
+#             - name: device-certs
+#               readOnly: true
+#               mountPath: /cert/device_cert_as_secret
+# {{- end }}
         - name: edgeccs
           # {{- if .Values.edgeccs.image.tag }}
           # image: {{ .Values.edgeccs.image.repository }}@{{ .Values.edgeccs.image.tag }}
