--- a/charts/core-edge/templates/edgeccs-deployment.yaml
+++ b/charts/core-edge/templates/edgeccs-deployment.yaml
@@ -18,16 +18,16 @@ spec:
         {{- include ".helm.selectorLabels" . | nindent 8 }}
         app: edgeccs
     spec:
-      # initContainers:
-      # - name: init-copy-device-certs-files-from-secret
-      #   image: busybox:latest
-      #   volumeMounts:
-      #     - name: shared-volume
-      #       mountPath: /cert
-      #     - name: device-certs
-      #       readOnly: true
-      #       mountPath: /cert/device_cert_as_secret
-      #   command: ['sh', '-c', "mkdir -p /cert/device_cert; cp -Lr /cert/device_cert_as_secret/* /cert/device_cert"]
+      initContainers:
+      - name: init-copy-device-certs-files-from-secret
+        image: busybox:latest
+        volumeMounts:
+          - name: shared-volume
+            mountPath: /cert
+          - name: device-certs
+            readOnly: true
+            mountPath: /cert/device_cert_as_secret
+        command: ['sh', '-c', "mkdir -p /cert/device_cert; cp -Lr /cert/device_cert_as_secret/* /cert/device_cert"]
       containers:
 {{- if .Values.keymanager }}
         - name: keymanager
@@ -41,8 +41,6 @@ spec:
           env:
             {{- toYaml .Values.keymanager.image.env | nindent 12 }}
           {{- end }}
-          resources:
-            {{- toYaml .Values.keymanager.resources | nindent 12 }}
           volumeMounts:
             - name: shared-volume
               mountPath: /cert
@@ -55,12 +53,10 @@ spec:
           # image: {{ .Values.edgeccs.image.repository }}@{{ .Values.edgeccs.image.tag }}
           # {{- else }}
           # image: {{ .Values.edgeccs.image.repository }}:latest
-          image: nginx:latest
           # {{- end }}
+          image: nginx:latest
           imagePullPolicy: Always
           {{- if .Values.edgeccs.image.env }}
-          resources:
-            {{- toYaml .Values.edgeccs.resources | nindent 12 }}
           env:
             {{- toYaml .Values.edgeccs.image.env | nindent 12 }}
           {{- end }}
