--- a/charts/core-edge/templates/edgeccs-deployment.yaml
+++ b/charts/core-edge/templates/edgeccs-deployment.yaml
@@ -49,12 +49,11 @@ spec:
               mountPath: /cert/device_cert_as_secret
 {{- end }}
         - name: edgeccs
-          # {{- if .Values.edgeccs.image.tag }}
-          # image: {{ .Values.edgeccs.image.repository }}@{{ .Values.edgeccs.image.tag }}
-          # {{- else }}
-          # image: {{ .Values.edgeccs.image.repository }}:latest
-          # {{- end }}
-          image: nginx:latest
+          {{- if .Values.edgeccs.image.tag }}
+          image: {{ .Values.edgeccs.image.repository }}@{{ .Values.edgeccs.image.tag }}
+          {{- else }}
+          image: {{ .Values.edgeccs.image.repository }}:latest
+          {{- end }}
           imagePullPolicy: Always
           {{- if .Values.edgeccs.image.env }}
           env:
