--- a/charts/core-edge/templates/service.yaml
+++ b/charts/core-edge/templates/service.yaml
@@ -13,4 +13,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include ".helm.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/instance: baseline
+    app.kubernetes.io/name: redis
