--- a/charts/kafka-rest-consumer-service/values.yaml
+++ b/charts/kafka-rest-consumer-service/values.yaml
@@ -12,6 +12,9 @@ image:
       value: '12'
     - name: KAFKA_REST_URL
       value: KAFKA_REST_PROXY_URL # this value is different between cloud and edge (edge has to go throuh internet to reach Traefik. In cloud, requests are made to Traefik's internal endpoint)
+    # Default Value is set at the image level https://github.com/htaic/kafka-rest-node-services/blob/main/Dockerfile-consumer
+    # - name: GROUP_NAME
+    #   value: A_CONSUMER_GROUP_NAME # this must be unique per deployment instance. For example, cloud instance has a different value than any edge location.
     - name: LOG_LEVEL
       value: DEBUG
     - name: LOG_SINK
