--- a/charts/rtsp-service/templates/deployment.yaml
+++ b/charts/rtsp-service/templates/deployment.yaml
@@ -28,6 +28,8 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include ".helm.serviceAccountName" . }}
+      dnsPolicy: ClusterFirstWithHostNet
+      hostNetwork: true
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
