fix: add baseline-configmap for auth/org postgres

--- a/charts/complete-auth-service/templates/deployment.yaml
+++ b/charts/complete-auth-service/templates/deployment.yaml
@@ -72,6 +72,8 @@ spec:
                 name: "auth-service-secret"
             - configMapRef:
                 name: "{{ .Release.Name }}-ory-keto-configmap"           
+            - configMapRef:
+                name: "baseline-configmap"
           livenessProbe:
             httpGet:
               path: /{{ .Values.image.livenessProbe }}
