--- a/charts/kafka-rest-consumer-service/values.yaml
+++ b/charts/kafka-rest-consumer-service/values.yaml
@@ -1,15 +1,15 @@
-namespace: 'hanwha'
+namespace: "hanwha"
 fullnameOverride: kafka-rest-consumer-service
 
 image:
   replicaCount: 1
   repository: ghcr.io/htaic/kafka-rest-consumer-service
   pullPolicy: Always
-  tag: 'sha-525f2ef'
-  secretref: 'auth-service-secret' # this is the secret where the database information will be pulled from
+  tag: "sha-525f2ef"
+  secretref: "baseline-postgresql-secret" # this is the secret where the database information will be pulled from
   env:
     - name: APP_DATA_VERSION
-      value: '12'
+      value: "12"
     - name: KAFKA_REST_URL
       value: KAFKA_REST_PROXY_URL # this value is different between cloud and edge (edge has to go throuh internet to reach Traefik. In cloud, requests are made to Traefik's internal endpoint)
     # Default Value is set at the image level https://github.com/htaic/kafka-rest-node-services/blob/main/Dockerfile-consumer
@@ -22,20 +22,20 @@ image:
     - name: LOG_WEBSOCKET_HOST
       value: localhost
     - name: LOG_WEBSOCKET_PORT
-      value: '6420'
+      value: "6420"
     - name: MAX_CONSUMER_RESTART_ATTEMPTS
-      value: '3'
+      value: "3"
     - name: OPERATION_ENV
-      value: 'edge'
+      value: "edge"
 
 ##########################
 # Caution updating below #
 ##########################
 sidecarimage:
-  name: 'logging-sidecar'
+  name: "logging-sidecar"
   repository: ghcr.io/htaic/platform-logging-service
   pullPolicy: Always
-  tag: 'latest'
+  tag: "latest"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
