--- a/charts/core-baseline/values.yaml
+++ b/charts/core-baseline/values.yaml
@@ -49,7 +49,9 @@ postgresql:
       # https://hub.docker.com/_/postgres
       - name: PGDATA
         value: /var/lib/postgresql/data/postgres # # To enable EFS on the cluster, use the following values in the root helm chart
-  
+    startUp:
+      scriptContent: |
+        apt install -y postgresql-14-wal2json
   # If using RDS for postgres
   # RDS:
   #   host: "YOUR_RDS_HOST"
