--- a/charts/core-baseline/values.yaml
+++ b/charts/core-baseline/values.yaml
@@ -51,7 +51,7 @@ postgresql:
         value: /var/lib/postgresql/data/postgres # # To enable EFS on the cluster, use the following values in the root helm chart
     startUp:
       scriptContent: |
-        apt install -y postgresql-14-wal2json
+        apt update && apt install -y postgresql-14-wal2json
         sed -i 's/#wal_level = replica/wal_level = logical/g' /var/lib/postgresql/data/postgres/postgresql.conf
   # If using RDS for postgres
   # RDS:
