--- a/charts/core-baseline/values.yaml
+++ b/charts/core-baseline/values.yaml
@@ -12,6 +12,9 @@ traefik:
     pullPolicy: Always
   service:
     type: LoadBalancer
+  providers:
+    kubernetesCRD:
+      allowCrossNamespace: true
 
 redis:
   redis:
