--- a/charts/media-token-service/templates/deployment.yaml
+++ b/charts/media-token-service/templates/deployment.yaml
@@ -43,6 +43,9 @@ spec:
           env: 
             {{- toYaml .Values.image.env | nindent 12 }}
           {{- end }}
+          envFrom:
+            - configMapRef:
+                name: "aws-account-configmap"  
           args: [ {{.Values.image.args}} ]
           ports:
             - name: http
