--- a/charts/core-edge/templates/edgeccs-deployment.yaml
+++ b/charts/core-edge/templates/edgeccs-deployment.yaml
@@ -32,7 +32,7 @@ spec:
 {{- if .Values.keymanager }}
         - name: keymanager
           {{- if .Values.keymanager.image.tag }}
-          image: {{ .Values.keymanager.image.repository }}@{{ .Values.keymanager.image.tag }}
+          image: {{ .Values.keymanager.image.repository }}:{{ .Values.keymanager.image.tag }}
           {{- else }}
           image: {{ .Values.keymanager.image.repository }}:latest
           {{- end }}
@@ -52,7 +52,7 @@ spec:
 {{- end }}
         - name: edgeccs
           {{- if .Values.edgeccs.image.tag }}
-          image: {{ .Values.edgeccs.image.repository }}@{{ .Values.edgeccs.image.tag }}
+          image: {{ .Values.edgeccs.image.repository }}:{{ .Values.edgeccs.image.tag }}
           {{- else }}
           image: {{ .Values.edgeccs.image.repository }}:latest
           {{- end }}
