--- a/charts/core-edge/templates/dcs-deployment.yaml
+++ b/charts/core-edge/templates/dcs-deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
         - name: dcs
           {{- if .Values.dcs.image.tag }}
-          image: {{ .Values.dcs.image.repository }}:{{ .Values.dcs.image.tag }}
+          image: {{ .Values.dcs.image.repository }}@{{ .Values.dcs.image.tag }}
           {{- else }}
           image: {{ .Values.dcs.image.repository }}:latest
           {{- end }}
