adding backward compatible environment changes

--- a/charts/redis/templates/secret.yaml
+++ b/charts/redis/templates/secret.yaml
@@ -6,8 +6,11 @@ data:
   REDIS_PASSWORD: {{ .Values.redis.password | b64enc }}
 stringData:
   REDIS_PORT: "{{ .Values.redis.containerPort }}"
+  REDISPORT: "{{ .Values.redis.containerPort }}"
   {{- if (hasKey .Values.redis "hostname") }}
   REDIS_HOST: {{ .Values.redis.hostname }}
+  REDISHOST: {{ .Values.redis.hostname }}
   {{- else }}
   REDIS_HOST: {{ include ".helm.fullname" . }}
+  REDISHOST: {{ include ".helm.fullname" . }}
   {{- end }}
